Ensure Action Tab Section Changes Correctly & Prevent Slight Overlap

--- a/css/admin.css
+++ b/css/admin.css
@@ -4,8 +4,7 @@
 
 .siteorigin-installer-header {
 	background: #f6f6f6;
-	margin: 0;
-	margin-left: -22px;
+	margin: 0 -22px;
 	padding: 15px 30px 0 30px;
 }
 
@@ -35,8 +34,7 @@
 	display: inline-block;
 	font-size: 12px;
 	line-height: 1em;
-	margin: 0 0 -1px 0;
-	position: relative;
+	margin: 0 0 -0.4px 0;
 	transition: all .2s;
 }
 
@@ -57,7 +55,7 @@
  	background: #f3f3f3;
 }
 
-.siteorigin-installer-wrap .page-sections li.active {
+.siteorigin-installer-wrap .page-sections li.active-section {
 	background: #f0f0f0;
 	border-bottom-color: #f0f0f0;
 }
